# calque-tauri

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
frontend/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
